[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Menu/MyStuff/EditPath/EditPath.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Aquire-BW0ox.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/Audiowide-en4g.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Images/logoSmall.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.309804, 1, 0.0313726, 1 )

[sub_resource type="DynamicFont" id=8]
size = 32
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=10]
size = 28
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.294118, 0.941176, 0, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BackGround" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1908.0
margin_bottom = 1185.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GoBackRowMargin" type="MarginContainer" parent="ScrollContainer/VBoxContainer"]
margin_right = 1908.0
margin_bottom = 110.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_bottom = 0

[node name="GoBackColumn" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/GoBackRowMargin"]
margin_top = 30.0
margin_right = 1878.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 80 )
alignment = 2

[node name="GoBackButton" type="Button" parent="ScrollContainer/VBoxContainer/GoBackRowMargin/GoBackColumn"]
margin_left = 1678.0
margin_right = 1878.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( -1976, -648 )
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Go Back"

[node name="TitleRow" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 1908.0
margin_bottom = 185.0
custom_constants/separation = 100
alignment = 1

[node name="TitleLabel" type="Label" parent="ScrollContainer/VBoxContainer/TitleRow"]
margin_left = 732.0
margin_right = 1176.0
margin_bottom = 71.0
custom_colors/font_color = Color( 0.945098, 0.937255, 0.905882, 1 )
custom_fonts/font = SubResource( 3 )
text = "Edit Path"
align = 1

[node name="LogoSmall" type="Sprite" parent="ScrollContainer/VBoxContainer/TitleRow"]
position = Vector2( 184, 46 )
scale = Vector2( 0.15025, 0.15025 )
texture = ExtResource( 4 )

[node name="Margin" type="MarginContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 189.0
margin_right = 1908.0
margin_bottom = 269.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="Margin" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Margin"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1878.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 20 )
alignment = 2

[node name="PathInfoMargin" type="MarginContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 273.0
margin_right = 1908.0
margin_bottom = 1185.0
rect_min_size = Vector2( 0, 500 )
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="PathInfoContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/PathInfoMargin"]
margin_left = 100.0
margin_right = 1808.0
margin_bottom = 912.0
custom_constants/separation = 60

[node name="TitleContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/PathInfoMargin/PathInfoContainer"]
margin_right = 1708.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 154 )
custom_constants/separation = 20

[node name="TitleLabel" type="Label" parent="ScrollContainer/VBoxContainer/PathInfoMargin/PathInfoContainer/TitleContainer"]
margin_right = 1708.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0.945098, 0.937255, 0.905882, 1 )
custom_fonts/font = SubResource( 4 )
text = "Title"

[node name="TitleEditContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/PathInfoMargin/PathInfoContainer/TitleContainer"]
margin_top = 74.0
margin_right = 1708.0
margin_bottom = 154.0

[node name="TitleEditLine" type="LineEdit" parent="ScrollContainer/VBoxContainer/PathInfoMargin/PathInfoContainer/TitleContainer/TitleEditContainer"]
margin_right = 1504.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
align = 1

[node name="TitleEditButton" type="Button" parent="ScrollContainer/VBoxContainer/PathInfoMargin/PathInfoContainer/TitleContainer/TitleEditContainer"]
margin_left = 1508.0
margin_right = 1708.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( -1976, -648 )
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Edit"

[node name="DescriptionContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/PathInfoMargin/PathInfoContainer"]
margin_top = 214.0
margin_right = 1708.0
margin_bottom = 638.0
rect_min_size = Vector2( 0, 154 )
size_flags_vertical = 3
custom_constants/separation = 20

[node name="DescriptionLabel" type="Label" parent="ScrollContainer/VBoxContainer/PathInfoMargin/PathInfoContainer/DescriptionContainer"]
margin_right = 1708.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0.945098, 0.937255, 0.905882, 1 )
custom_fonts/font = SubResource( 4 )
text = "Description"

[node name="DescriptionEditBox" type="TextEdit" parent="ScrollContainer/VBoxContainer/PathInfoMargin/PathInfoContainer/DescriptionContainer"]
margin_top = 74.0
margin_right = 1708.0
margin_bottom = 324.0
rect_min_size = Vector2( 0, 250 )
size_flags_vertical = 3
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_readonly = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/normal = SubResource( 7 )
text = "descriptionp"
wrap_enabled = true

[node name="DescriptionEditButton" type="Button" parent="ScrollContainer/VBoxContainer/PathInfoMargin/PathInfoContainer/DescriptionContainer"]
margin_left = 754.0
margin_top = 344.0
margin_right = 954.0
margin_bottom = 424.0
rect_min_size = Vector2( 200, 80 )
rect_pivot_offset = Vector2( -1976, -648 )
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Edit"

[node name="NodeLabelContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/PathInfoMargin/PathInfoContainer"]
margin_top = 698.0
margin_right = 1708.0
margin_bottom = 852.0
rect_min_size = Vector2( 0, 154 )
custom_constants/separation = 20

[node name="NodeLabel" type="Label" parent="ScrollContainer/VBoxContainer/PathInfoMargin/PathInfoContainer/NodeLabelContainer"]
margin_right = 1708.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0.945098, 0.937255, 0.905882, 1 )
custom_fonts/font = SubResource( 4 )
text = "Levels"

[node name="NodeContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/PathInfoMargin/PathInfoContainer"]
margin_top = 912.0
margin_right = 1708.0
margin_bottom = 912.0
